--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>boya</title>
+    <title>博亚君杰-领先的创新型技术服务提供商</title>
+    <meta http-equiv="keywords" content="技术服务、外包、IT服务">
   </head>
   <body>
     <div id="app"></div>
